# AndroidNativeOpengles

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/windy/opengles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: beatingheart_fragment.glsl  beatingheart_vertex.glsl
app/src/main/cpp/: CMakeLists.txt  CommonInclude.cpp  CommonInclude.h  app_main.cpp  native-lib.cpp
app/src/main/cpp/egl/: EglCore.cpp
app/src/main/cpp/native-samples/: BeatingHeartSample.cpp  BeatingHeartSample.h  CloudSample.cpp  CloudSample.h  GLSampleBase.h  TriangleSample.cpp  TriangleSample.h
app/src/main/cpp/platform/: CallJavaHelper.cpp  CallJavaHelper.h  ConvertUTF.cpp  ConvertUTF.h  ResourceManager.cpp  ResourceManager.h  ccUTF8.cpp  ccUTF8.h
app/src/main/cpp/render/: GLRenderContext.cpp  GLRenderContext.h
app/src/main/cpp/util/: GLUtils.cpp  GLUtils.h
app/src/main/java/com/windy/opengles/: App.kt  MainActivity.kt
app/src/main/java/com/windy/opengles/render/: GLCustomSurfaceView.kt  GlCustomRender.kt  NativeRender.kt
app/src/main/java/com/windy/opengles/util/: ShaderUtil.java  Utils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: beatingheart_fragment.glsl  beatingheart_vertex.glsl  triangle_fragment.glsl  triangle_vertex.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/windy/opengles/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
